samples/_failures_safe/1761542924_245e95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfdae6a0.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_bfdae6a0.c:147: error: expected ‘{’ at end of input
